--- a/src/app/components/card-product/card-product.component.scss
+++ b/src/app/components/card-product/card-product.component.scss
@@ -3,20 +3,31 @@
   display: flex;
   flex-direction: column;
   gap: .8rem;
+  cursor: pointer;
 
   &:hover {
     img {
       filter: brightness(90%);
     }
   }
+  .image__container {
+    position: relative;
 
-  img {
-    width: 100%;
-    max-width: 305px;
-    height: 100%;
-    max-height: 305px;
-    border-radius: 6px;
-  }
+    img {
+      width: 100%;
+      max-width: 305px;
+      height: 100%;
+      max-height: 305px;
+      border-radius: 6px;
+    }
+    .flags {
+      display: flex;
+      padding-left: .8rem;
+      gap: .8rem;
+      position: absolute;
+      bottom: 10px;
+    }
+  }  
   .type-product {
     font-size: 1.2rem;
     color: #6d6d6d;
