fix: footer text

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -27,5 +27,8 @@
       </ul>
     </div>
     <span class="copyright">© 2023 Sony Interactive Entertainment Inc. Todos os direitos reservados.</span>
+    <span class="developed">Developed by 
+      <a href="https://yasminhernandes.vercel.app">Yasmin Hernandes</a>
+    </span>
   </div>
 </footer>
